# cpp-lib-template

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  cmake-presets  cppenv-nix-conan.json  fetchcontent-lockfile.json  flake.nix
.cursor/rules/: repo.mdc
.github/scripts/: setup-nix-clang-libcxx-env.sh
.github/workflows/: ci.yml  ci_tests.yml  pre-commit-check.yml  pre-commit-update.yml
cmake/: mb.cpp-lib-template-config.cmake.in
conan/profiles/: linux-clang-debug  linux-clang-libcxx-debug  linux-clang-libcxx-release  linux-clang-release  linux-gcc-debug  linux-gcc-release  macos-appleclang-debug  macos-appleclang-release
examples/: CMakeLists.txt  usage.cpp
include/mb/cpp-lib-template/: CMakeLists.txt  cpp-lib-template.hpp
scripts/: new-cpp-lib.py
src/: CMakeLists.txt  compile-check.cpp  cpp-lib-template.cpp
src/cpp-lib-template/: cpp-lib-template.test.cpp
